--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
                                                 <td align="left">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #595959;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><em>Подводим итоги нашей общей активности за&nbsp;июнь в&nbsp;цифрах. <span style="font-weight: bold;">Важно: </span>каждый личный шаг и посильное участие  наибольшего числа сотрудников приближает нас к заветной цели Марафона.</em></div>
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #595959;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><em>Подводим итоги нашей общей активности за&nbsp;июнь в&nbsp;цифрах. <span style="font-weight: bold;">Важно: </span>каждый личный шаг и&nbsp;посильное участие наибольшего числа сотрудников приближает нас к&nbsp;заветной цели Марафона.</em></div>
                                                 </td>
                                             </tr></table></td>
       </tr></table>
@@ -213,7 +213,7 @@
 <table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="90%">
                                             <tr>
                                                 <td style="padding-top: 10px; padding-bottom: 10px;" align="center">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong>Мы&nbsp;прошли 97 968 000 шагов,</strong> то есть дважды обогнули вокруг экватора<br></div>
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong>Мы&nbsp;прошли 97 968 000&nbsp;шагов,</strong> то&nbsp;есть дважды обогнули вокруг экватора<br></div>
                                                 </td>
                                             </tr></table></td>
         <td width="20" class="em-mob-wrap em-mob-height-20px"></td>
@@ -222,7 +222,7 @@
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="90%">
                                             <tr>
                                                 <td style="padding-top: 10px; padding-bottom: 10px;" align="center">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong>Мы&nbsp;проехали 5 986 км</strong>, то есть почти добрались от Москвы до Читы, где мы обустраиваем   площадку для Лилового дома<br></div>
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong>Мы&nbsp;проехали 5 986&nbsp;км</strong>, то&nbsp;есть почти добрались от&nbsp;Москвы до&nbsp;Читы, где мы&nbsp;обустраиваем площадку для Лилового дома<br></div>
                                                 </td>
                                             </tr></table></td>
       </tr></table>
@@ -238,7 +238,7 @@
 <table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="90%">
                                             <tr>
                                                 <td style="padding-top: 10px; padding-bottom: 10px;" align="center">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><strong>Мы&nbsp;проплыли 256,5 км</strong>, то есть 3 раза переплыли Байкал в его самой широкой части
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><strong>Мы&nbsp;проплыли 256,5&nbsp;км</strong>, то&nbsp;есть 3&nbsp;раза переплыли Байкал в&nbsp;его самой широкой части
 <br></div>
                                                 </td>
                                             </tr></table></td>
@@ -248,7 +248,7 @@
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="90%">
                                             <tr>
                                                 <td style="padding-top: 10px; padding-bottom: 10px;" align="center">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><strong>Мы&nbsp;пробежали4 804 км</strong>, то есть преодолели расстояние между Магаданом и Иркутском<br></div>
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><strong>Мы&nbsp;пробежали4 804&nbsp;км</strong>, то&nbsp;есть преодолели расстояние между Магаданом и&nbsp;Иркутском<br></div>
                                                 </td>
                                             </tr></table></td>
       </tr></table>
@@ -258,12 +258,11 @@
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 15px; padding-left: 0px;" align="left">
-  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 32px; color: #000000; font-size: 28px;" class="em-font-Montserrat-Bold" align="left"><strong style="font-size: 22px;">________ часов</strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 32px; color: #000000; font-size: 28px;" class="em-font-Montserrat-Bold" align="left"><strong style="font-size: 22px;">2025 часов</strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
                                                 <td align="left" style="padding-bottom: 30px;">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular">физической активности, когда мы&nbsp;тренировались в&nbsp;зале, играли футбол и&nbsp;теннис, тренировались на&nbsp;улице.. И&nbsp;это среднестатистически ____ сожженных калорий!
-<br></div>
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular">физической активности, когда мы&nbsp;тренировались в&nbsp;зале, играли футбол и&nbsp;теннис, тренировались на&nbsp;улице. И&nbsp;это среднестатистически <strong>1&nbsp;миллион сожжённых калорий</strong>!<br></div>
                                                 </td>
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td height="0" style="padding-right: 0px; padding-bottom: 0px; padding-left: 0px; border-top: 2px solid #a3adbb;">&nbsp;</td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 15px; padding-left: 0px;" align="left">
   <div style="font-family: Helvetica, Arial, sans-serif; line-height: 32px; color: #000000; font-size: 20px;" class="em-font-Montserrat-Bold" align="left"><strong style="font-size: 22px;">Материалы месяца:</strong></div>
@@ -271,7 +270,7 @@
                                             <tr>
                                                 <td align="left">
                                                     <div style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #595959;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><em>В&nbsp;приложении <span style="font-weight: bold;">ежедневно</span> выходят статьи, сториз или уроки. Большая часть из&nbsp;них посвящена здоровью, физической активности или питанию. <br>
-Отдельно, в рамках «Марафона добра», мы готовим авторские материалы, раскрывающие тему каждого месяца и рассказывающие о том, что может быть интересно всем участникам нашего глобального челленджа - как менять мир к лучшему.  Такие статьи отмечены бейджем марафона на обложке.
+Отдельно, в&nbsp;рамках «Марафона добра», мы&nbsp;готовим авторские материалы, раскрывающие тему каждого месяца и&nbsp;рассказывающие о&nbsp;том, что может быть интересно всем участникам нашего глобального челленджа&nbsp;— как менять мир к&nbsp;лучшему. Такие статьи отмечены бейджем марафона на&nbsp;обложке.
 </em></div>
                                                 </td>
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 20px 0px 12px;" align="left">
@@ -472,7 +471,7 @@
 <table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
                                                 <td align="left" style="padding-bottom: 20px;">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #595959;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><em>Нельзя не отметить и тех сотрудников, которым не хватило чуть-чуть, чтобы попасть в топ-10. <strong>В качестве благодарности и мотивации на будущие свершения мы решили подарить 20 дополнительных</strong> ⚡ 20 сотрудникам, которые были близки к попаданию в топ-10. Так держать и ждем вас в числе амбассадоров в следующих месяцах!</em><em></em></div>
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #595959;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><em>Нельзя не&nbsp;отметить и&nbsp;тех сотрудников, которым не&nbsp;хватило чуть-чуть, чтобы попасть в&nbsp;топ-10. <strong>В&nbsp;качестве благодарности и&nbsp;мотивации на&nbsp;будущие свершения мы&nbsp;решили подарить 20&nbsp;дополнительных</strong> ⚡ 20&nbsp;сотрудникам, которые были близки к&nbsp;попаданию в&nbsp;топ-10. Так держать и&nbsp;ждем вас в&nbsp;числе амбассадоров в&nbsp;следующих месяцах!</em><em></em></div>
                                                 </td>
                                             </tr></table></td>
       </tr></table>
@@ -712,14 +711,14 @@
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
                                                 <td align="left" style="padding: 10px 10px 20px; background-color: #535d6e; background-repeat: repeat; border-top-left-radius: 20px; border-top-right-radius: 20px;" bgcolor="#535D6E">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px; color: #FFFFFF" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><strong></strong><span style="font-weight: bold;">❓Вопрос:</span> «Как я могу помочь в качестве волонтера, если у меня нет свободного времени?»<br></div>
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px; color: #FFFFFF" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><strong></strong><span style="font-weight: bold;">❓Вопрос:</span> «Как я&nbsp;могу помочь в&nbsp;качестве волонтера, если у&nbsp;меня нет свободного времени?»<br></div>
                                                 </td>
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
                                                 <td align="left" style="padding-bottom: 30px; padding-left: 10px; padding-right: 10px; border-width: 1px; border-style: solid; border-color: #bfbfbf; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><strong></strong><span style="font-weight: bold;">📝Ответ: </span>На этом этапе самая бесценная помощь будет, если, встречая коллег, вы будете спрашивать:<span style="font-style: italic;"><br> 
-— «а вы скачали приложение?»,<br>— «подключили синхронизацию шагов?»,<br>
-— «заходите хотя бы раз в 3 дня?».
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><strong></strong><span style="font-weight: bold;">📝Ответ: </span>На&nbsp;этом этапе самая бесценная помощь будет, если, встречая коллег, вы&nbsp;будете спрашивать:<span style="font-style: italic;"><br>
+—&nbsp;«а&nbsp;вы&nbsp;скачали приложение?»,<br>—&nbsp;«подключили синхронизацию шагов?»,<br>
+—&nbsp;«заходите хотя&nbsp;бы раз в&nbsp;3&nbsp;дня?».
 <br>Для нас важен каждый шаг, каждого сотрудника</span>❤️<strong></strong>
 <br></div>
                                                 </td>
@@ -865,7 +864,7 @@ II. Планы на&nbsp;июль</strong></div>
       </td>
       <td width="10">&nbsp;</td>
       <td align="left" valign="top">
-        <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #333333;" class="em-font-Montserrat-Regular"><strong></strong><strong></strong><strong></strong>Как обеспечить безопасной отдых на природе?
+        <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #333333;" class="em-font-Montserrat-Regular"><strong></strong><strong></strong><strong></strong>Как обеспечить безопасной отдых на&nbsp;природе?
 </div>
       </td>
     </tr></table>
@@ -877,7 +876,7 @@ II. Планы на&nbsp;июль</strong></div>
       </td>
       <td width="10">&nbsp;</td>
       <td align="left" valign="top">
-        <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #333333;" class="em-font-Montserrat-Regular"><strong></strong><strong></strong><strong></strong>Как объединить волонтерство и отдых?
+        <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #333333;" class="em-font-Montserrat-Regular"><strong></strong><strong></strong><strong></strong>Как объединить волонтерство и&nbsp;отдых?
 </div>
       </td>
     </tr></table>
@@ -889,7 +888,7 @@ II. Планы на&nbsp;июль</strong></div>
       </td>
       <td width="10">&nbsp;</td>
       <td align="left" valign="top">
-        <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #333333;" class="em-font-Montserrat-Regular"><strong></strong><strong></strong><strong></strong>Как соблюдать баланс между активным и пассивным отдыхом?
+        <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #333333;" class="em-font-Montserrat-Regular"><strong></strong><strong></strong><strong></strong>Как соблюдать баланс между активным и&nbsp;пассивным отдыхом?
 </div>
       </td>
     </tr></table>
