--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Дайджест «Марафона Добра»_Ибн</title><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700&display=swap" em-class="em-font-Montserrat-Bold"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:ital,wght@0,600&display=swap" em-class="em-font-Oswald-SemiBold"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400&display=swap" em-class="em-font-Montserrat-Regular">
+	<title>Дайджест «Марафона Добра»_Июнь</title><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700&display=swap" em-class="em-font-Montserrat-Bold"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:ital,wght@0,600&display=swap" em-class="em-font-Oswald-SemiBold"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400&display=swap" em-class="em-font-Montserrat-Regular">
 	
 	
 	
@@ -832,7 +832,7 @@ II. Планы на&nbsp;июль</strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
                                                 <td align="left">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #595959;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><em>Чтобы «Марафона Добра» проходил увлекательно и&nbsp;был полезен, <span style="font-weight: bold;">каждый месяц проекта будет посвящен отдельной теме.</span> Именно эта тема будет определять экспертные материалы, которые будут публиковаться в&nbsp;приложении, а&nbsp;также конкурсы и&nbsp;иную активность, за&nbsp;которую можно получить дополнительные заряды ⚡.</em></div>
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #595959;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><em>Чтобы «Марафон Добра» проходил увлекательно и&nbsp;был полезен, <strong>каждый месяц проекта будет посвящен отдельной теме</strong>. Именно эта тема определит экспертные материалы, которые публикуются в&nbsp;приложении, а&nbsp;также конкурсы и&nbsp;другие активности, за&nbsp;которые можно будет получить дополнительные заряды.⚡.</em></div>
                                                 </td>
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
